--- a/AvitoML_DB.ipynb
+++ b/AvitoML_DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -199,102 +199,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>preprocessedTitle</th>\n",
-       "      <th>preprocessedDescr</th>\n",
-       "      <th>price</th>\n",
-       "      <th>y2</th>\n",
-       "      <th>y0</th>\n",
-       "      <th>y1</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>картин</td>\n",
-       "      <td>гобел размер 139х84см</td>\n",
-       "      <td>1000.0</td>\n",
-       "      <td>19</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>стул из прессова кож</td>\n",
-       "      <td>прод недор стул из светл прессова кож стильн н...</td>\n",
-       "      <td>1250.0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>домашн мин бан</td>\n",
-       "      <td>мин бан мб мин саун предназнач для принят тепл...</td>\n",
-       "      <td>13000.0</td>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>эксклюзивн коллекц книг трансаэр подарок</td>\n",
-       "      <td>прод эксклюзивн коллекц книг выпущен ограничен...</td>\n",
-       "      <td>4000.0</td>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>ноутбук aser</td>\n",
-       "      <td>прод тся ноутбук acer e5 511c2ta купл конц ноя...</td>\n",
-       "      <td>19000.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   item_id                         preprocessedTitle  \\\n",
-       "0        1                                    картин   \n",
-       "1        2                      стул из прессова кож   \n",
-       "2        3                            домашн мин бан   \n",
-       "3        4  эксклюзивн коллекц книг трансаэр подарок   \n",
-       "4        5                              ноутбук aser   \n",
-       "\n",
-       "                                   preprocessedDescr    price  y2  y0  y1  \n",
-       "0                              гобел размер 139х84см   1000.0  19   2  14  \n",
-       "1  прод недор стул из светл прессова кож стильн н...   1250.0  22   2  14  \n",
-       "2  мин бан мб мин саун предназнач для принят тепл...  13000.0  37   1  15  \n",
-       "3  прод эксклюзивн коллекц книг выпущен ограничен...   4000.0  43   0  17  \n",
-       "4  прод тся ноутбук acer e5 511c2ta купл конц ноя...  19000.0   1   3  11  "
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sqlite3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-31fd6fb3e17c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mconnection\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msqlite3\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconnect\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"C:\\projects\\AvitoML\\data\\items.sqlite\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m data = pd.read_sql_query('''select catdata._rowid_ as item_id, preprocessedTitle, preprocessedDescr, price, \n\u001b[1;32m      4\u001b[0m                                 \u001b[0mcategory_id\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0my2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc0ind\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0my0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc1ind\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0my1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m                                 from catdata join catind using(category_id)''', connection)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sqlite3' is not defined"
+     ]
     }
    ],
    "source": [
