--- a/AvitoML_NN.ipynb
+++ b/AvitoML_NN.ipynb
@@ -2,22 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using Theano backend.\n",
+      "WARNING (theano.configdefaults): g++ not available, if using conda: `conda install m2w64-toolchain`\n",
+      "C:\\Users\\nigolov\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\theano\\configdefaults.py:560: UserWarning: DeprecationWarning: there is no c++ compiler.This is deprecated and with Theano 0.11 a c++ compiler will be mandatory\n",
+      "  warnings.warn(\"DeprecationWarning: there is no c++ compiler.\"\n",
+      "WARNING (theano.configdefaults): g++ not detected ! Theano will be unable to execute optimized C-implementations (for both CPU and GPU) and will default to Python implementations. Performance will be severely degraded. To remove this warning, set Theano flags cxx to an empty string.\n",
+      "WARNING (theano.tensor.blas): Using NumPy C-API based implementation for BLAS functions.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/AvitoML/data/\n"
+      "C:/projects/AvitoML/data/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nigolov\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\gensim\\utils.py:860: UserWarning: detected Windows; aliasing chunkize to chunkize_serial\n",
+      "  warnings.warn(\"detected Windows; aliasing chunkize to chunkize_serial\")\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "\n",
-    "homeDIR = \"/usr/local/AvitoML/data/\"\n",
-    "#homeDIR = \"C:/projects/AvitoML/data/\"\n",
+    "#homeDIR = \"/usr/local/AvitoML/data/\"\n",
+    "homeDIR = \"C:/projects/AvitoML/data/\"\n",
     "\n",
     "os.environ[\"MKL_THREADING_LAYER\"] = \"GNU\"\n",
     "import numpy as np\n",
@@ -57,14 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(489517, 12)\n"
+      "(489517, 8)\n"
      ]
     }
    ],
@@ -76,8 +100,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -85,14 +111,14 @@
      "text": [
       "(400000,) (400000,)\n",
       "384\n",
-      "Found 113775 unique tokens\n",
+      "Found 106923 unique tokens\n",
       "Shape of data tensor: (400000, 384)\n",
       "Shape of label tensor: (400000, 54)\n"
      ]
     }
    ],
    "source": [
-    "x = np.array(data['preprocessed1Title'][:SAMPLE_SIZE].tolist())\n",
+    "x = np.array(data['preprocessed3Title'][:SAMPLE_SIZE].tolist())\n",
     "y = np.array(data['category_id'][:SAMPLE_SIZE])\n",
     "print(x.shape, y.shape)\n",
     "print(MAX_SEQUENCE_LENGTH)\n",
@@ -116,7 +142,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2367,13 +2395,7 @@
       "шаль 2242\n",
       "oneplus 2243\n",
       "530 2244\n",
-      "теплица 2245\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "теплица 2245\n",
       "вега 2246\n",
       "арсенал 2247\n",
       "коктейльный 2248\n",
@@ -5087,13 +5109,7 @@
       "миф 4956\n",
       "щит 4957\n",
       "кровельный 4958\n",
-      "1998 4959\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "1998 4959\n",
       "индонезия 4960\n",
       "говорить 4961\n",
       "фантьеты 4962\n",
@@ -7202,7 +7218,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -7263,7 +7281,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -7430,7 +7450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
